fix: playlist player hidden on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   Theme Name: Project P.
   Author: Victor Andeloci
   Author URI: https://github.com/victorandeloci
-  Version: 1.6.0
+  Version: 1.6.1
 */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -4625,6 +4625,9 @@ html body #playlistPlayerModal .playlist-player-details .total-details {
 @media screen and (max-width: 1023px) {
   html body .container {
     width: 90%;
+  }
+  html body main .lists .playlist-item .playlist-items-btn-container .playlist-play-btn {
+    display: none !important;
   }
 }
 
